@@ -1,3 +1,6 @@
+2016-06-03   Dave Lerner <dave.lerner@windriver.com>
+	* src/exec.c: New check_reorder_needed, section_reorder_fix functions
+
 2016-03-22   Mark Hatle <mark.hatle@windriver.com>
 	* src/gather.c, src/get.c: Fix LD_PRELOAD
 
